# ai-dev-workflow-lab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pr-review.yml
docs/: PORTFOLIO_NOTES.md
scripts/: check.ps1  check.sh
src/app/: main.py
src/app/api/: routes.py  tasks.py
src/app/core/: config.py  exceptions.py  logging.py  middleware.py  request_context.py
src/app/db/: migrations.py  session.py
src/app/models/: task.py
src/app/repositories/: tasks.py
src/app/schemas/: task.py
src/app/services/: status.py  tasks.py
tests/: test_main.py  test_tasks.py
